# daily_games_bot

./: .gitignore  AGENTS.md  README.md  config.json  daily_games_bot.py  pyproject.toml
daily_games_bot/: bot.py
scripts/: data_insert.py  run_bot.py
src/daily_games_bot/: __init__.py  bot.py  config.py  modeling.py  parsing.py
src/daily_games_bot/parsing/: chat.py
