[project]
name = "daily-games-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "discord-py>=2.6.3",
    "pydantic>=2.9.2",
    "pyparsing>=3.2.0",
    "sqlmodel>=0.0.27",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
